# magprofile

./: pyproject.toml
halal/: CMakeLists.txt  INTRODUCTION.docx  LICENSE  Makefile
halal/gui/: Info.plist  gui_analysis.c  gui_analysis.h  main_gui.c  nuklear_setup.h
halal/paper/: generate_fig2_methodology.py  generate_figures.py  speciesid_paper.docx  speciesid_paper.md  speciesid_paper_foodchem.docx  speciesid_paper_foodchem.md
halal/scripts/: extract_amplicons.py
halal/src/: calibrate.c  calibrate.h  classify.h  degrade.h  em.c  em.h  fastq.h  index.h  kmer.h  main.c  refdb.c  refdb.h  refseqs.h  report.c  report.h  simulate.h  update.c  update.h  utils.c  utils.h
halal/test/: run_tests.sh  test_em.c  test_index.c  test_simulate.c
mag/: FINDINGS_v021.md  __init__.py  beta.py  cli.py  compartment_specificity.py  core_microbiome.py  differential.py  diversity.py  func_io.py  func_profile.py  func_report.py  html_report.py  indicator.py  io.py  net_correlation.py  net_report.py  net_topology.py  ordination.py  plots.py  report.py  stats.py  v043_analysis_report.txt
mag/docs/plans/: 2026-02-18-magfunc-magnet-design.md  2026-02-18-magfunc-magnet-implementation.md
mag/tests/: fixtures.py  test_beta.py  test_compartment_specificity.py  test_core_microbiome.py  test_differential.py  test_diversity.py  test_func_io.py  test_func_profile.py  test_func_report.py  test_indicator.py  test_io.py  test_net_correlation.py  test_net_report.py  test_net_topology.py  test_ordination.py  test_plots.py  test_report.py  test_stats.py
mag/thesis/: THESIS_PROGRESS.md  TIMELINE.md
mag/thesis/back_matter/: appendices.md
mag/thesis/chapters/: chapter1_introduction.md  chapter2_literature_review.md  chapter3_ecology.md  chapter4_function.md  chapter4_functional.md  chapter5_network.md  chapter6_discussion.md  chapter6_general_discussion.md
mag/thesis/front_matter/: abstract.md
mag/thesis/papers/: paper1_ecology.md  paper2_functional_network.md  paper3_softwarex.md
strainsift/: __init__.py  benchmark.py  classify.py  cli.py  em.py  index.py  simulator.py  sketch.py  types.py  utils.py
strainsift/tests/: test_classify.py  test_em.py  test_integration.py  test_simulator.py  test_sketch.py
