[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strainsift"
version = "1.0.0-dev"
description = "Joint Strain-Function Inference for Shotgun Metagenomics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
strainsift = "strainsift.cli:main"

[tool.pytest.ini_options]
testpaths = ["strainsift/tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["strainsift*"]
